# tre

./: .gitignore  CMakeLists.txt  config.h.in
include/tre/: regex.h  tre.h
lib/: tre-config.h.in  tre-parse.c
src/: agrep.c
tests/: test-str-source.c
